tests/baselines/reference/privacyGloClass.errors.txt
==== tests/cases/compiler/privacyGloClass.ts (5 errors) ====
    module m1 {
        export interface m1_i_public {
        }
    
        interface m1_i_private {
        }
    
        export class m1_c_public {
            private f1() {
            }
        }
    
        class m1_c_private {
        }
    
        class m1_C1_private extends m1_c_public {
        }
        class m1_C2_private extends m1_c_private {
        }
        export class m1_C3_public extends m1_c_public {
        }
        export class m1_C4_public extends m1_c_private {
                                          ~~~~~~~~~~~~
!!! privacyGloClass.ts(22,39): error TS2018: Exported class 'm1_C4_public' extends private class 'm1_c_private'.
        }
    
        class m1_C5_private implements m1_i_public {
        }
        class m1_C6_private implements m1_i_private {
        }
        export class m1_C7_public implements m1_i_public {
        }
        export class m1_C8_public implements m1_i_private {
                                             ~~~~~~~~~~~~
!!! privacyGloClass.ts(31,42): error TS2019: Exported class 'm1_C8_public' implements private interface 'm1_i_private'.
        }
    
        class m1_C9_private extends m1_c_public implements m1_i_private, m1_i_public {
        }
        class m1_C10_private extends m1_c_private implements  m1_i_private, m1_i_public {
        }
        export class m1_C11_public extends m1_c_public implements  m1_i_private, m1_i_public {
                                                                   ~~~~~~~~~~~~
!!! privacyGloClass.ts(38,64): error TS2019: Exported class 'm1_C11_public' implements private interface 'm1_i_private'.
        }
        export class m1_C12_public extends m1_c_private implements  m1_i_private, m1_i_public {
                                           ~~~~~~~~~~~~
!!! privacyGloClass.ts(40,40): error TS2018: Exported class 'm1_C12_public' extends private class 'm1_c_private'.
                                                                    ~~~~~~~~~~~~
!!! privacyGloClass.ts(40,65): error TS2019: Exported class 'm1_C12_public' implements private interface 'm1_i_private'.
        }
    }
    
    interface glo_i_public {
    }
    
    class glo_c_public {
        private f1() {
        }
    }
    
    class glo_C3_public extends glo_c_public {
    }
    
    class glo_C7_public implements glo_i_public {
    }
    
    class glo_C11_public extends glo_c_public implements glo_i_public {
    }
    